--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "gravatar": "^1.8.2",
     "helmet": "^6.0.1",
+    "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
     "morgan": "^1.10.0"
