--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "gravatar": "^1.8.2",
-    "helmet": "^6.0.1",
+    "helmet": "^6.2.0",
     "imagemin": "^8.0.1",
     "imagemin-jpegtran": "^7.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
     "imagemin-pngquant": "^9.0.2",
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
